--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
+      rel="stylesheet">
+    <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/style.css" />
+      referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="css/style.css" >
     <title>Webstudio</title>
   </head>
   <body>
@@ -46,13 +43,11 @@
             <ul class="header-list list">
               <li>
                 <a class="header-mail" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+                  >info@devstudio.com</a>
               </li>
               <li>
                 <a class="header-tel" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
+                  >+11 (000) 111-11-11</a>
               </li>
             </ul>
           </address>
@@ -63,17 +58,14 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <div class="hero-container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="hero-button" type="button">Order Service</button>
-          </div>
         </div>
       </section>
 
       <!-- section 2 -->
       <section class="advantage">
         <div class="container">
-          <div class="advantage-container">
             <h2 class="advantage-title">Our advantages</h2>
             <ul class="advantage-list list">
               <li class="advantage-item">
@@ -105,76 +97,71 @@
                 </p>
               </li>
             </ul>
-          </div>
         </div>
       </section>
 
       <!-- Tehnologies -->
       <section class="tehnologies">
         <div class="container">
-          <div class="tehnologies-container">
             <h2 class="tehnologies-title title">What are we doing</h2>
             <ul class="tehnologies-list list">
               <li class="tehnologies-item">
-                <img src="./images/img1_1-min.jpg" alt="desktop" width="360" />
+                <img src="./images/img1_1-min.jpg" alt="desktop" width="360" >
               </li>
               <li class="tehnologies-item">
-                <img src="./images/img1_2-min.jpg" alt="mobile" width="360" />
+                <img src="./images/img1_2-min.jpg" alt="mobile" width="360" >
               </li>
               <li class="tehnologies-item">
-                <img src="./images/img1_3-min.jpg" alt="laptop" width="360" />
+                <img src="./images/img1_3-min.jpg" alt="laptop" width="360" >
               </li>
             </ul>
-          </div>
         </div>
       </section>
       <!-- Our team -->
       <section class="team">
         <div class="container">
-          <div class="team-container">
             <h2 class="team-title title">Our Team</h2>
             <ul class="team-list list">
               <li class="team-item">
-                <img src="./images/img1-min.jpg" alt="Foto team1" width="264" />
+                <img src="./images/img1-min.jpg" alt="Foto team1" width="264">
                 <div class="item-content">
                   <h3 class="subtitle">Mark Guerrero</h3>
                   <p class="team-desc desc">Product Designer</p>
                 </div>
               </li>
               <li class="team-item">
-                <img src="./images/img2-min.jpg" alt="Foto team2" width="264" />
+                <img src="./images/img2-min.jpg" alt="Foto team2" width="264" >
                 <div class="item-content">
                   <h3>Tom Ford</h3>
                   <p class="team-desc desc">Frontend Developer</p>
                 </div>
               </li>
               <li class="team-item">
-                <img src="./images/img3-min.jpg" alt="Foto team3" width="264" />
+                <img src="./images/img3-min.jpg" alt="Foto team3" width="264">
                 <div class="item-content">
                   <h3 class="subtitle">Camila Garcia</h3>
                   <p class="team-desc desc">Marketing</p>
                 </div>
               </li>
               <li class="team-item">
-                <img src="./images/img4-min.jpg" alt="Foto team4" width="264" />
+                <img src="./images/img4-min.jpg" alt="Foto team4" width="264" >
                 <div class="item-content">
                   <h3 class="subtitle">Daniel Wilson</h3>
                   <p class="team-desc desc">UI Designer</p>
                 </div>
               </li>
             </ul>
-          </div>
         </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="container">
-          <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-          <p class="footer-desc">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-          </p>
+        <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+        <p class="footer-desc">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
